2007-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-module-list): Don't compile mew-w3m.el and
	mew-shimbun.el if there is only the official Mew XEmacs package that is
	extremely old.

	* w3m-proc.el: Update the way to suppress compile warning for gensym.

	* w3m-util.el (w3m-list-buffers): Check if w3m-fb-mode is bound.

	* w3m.el (w3m-copy-buffer, w3m-mouse-major-mode-menu): Remove unused
	let-bound variables.

2007-10-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-lisp): Don't install w3m-ems.el for XEmacs and
	w3m-xmas.el for GNU Emacs.

2007-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* *, doc/*: Fix expressions of the copyright notices.

	* w3mhack.el (w3mhack-makeinfo): Don't split Info file to pieces.

	* doc/emacs-w3m.texi, doc/emacs-w3m-ja.texi: Use @copying and
	@insertcopying to put up the copyright notice.
	(Coding convention of Shimbun): Don't use @itemx with @@multitable.

	* doc/ptexinfmt.el (texinfo-copying-text, texinfo-copying)
	(texinfo-insertcopying, texinfo-format-scan): Add them for old Emacsen.

	* doc/Makefile.in (install): Remove installed *.info-[0-9] files;
	install only *.info files.
	(.texi.dvi): Don't specify "-l ja" to texi2dvi.
	(clean): No need to remove *.info-[0-9] and *.info-[0-9][0-9] files.

2007-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-find-coding-system): Return symbol, not coding
	system object.

2007-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-entity-regexp, w3m-entity-value): Accept case-insensitive
	numeric character references.

2007-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-message): Work with XEmacs.

2007-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el: Bind w3m-use-title-buffer-name (see the comment).

	* Makefile.in (very-slow): Add missing semicolon.

2007-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-lisp): Don't install ChangeLog~.

2007-10-02  Naohiro Aota  <nao.aota@gmail.com>
